CMAKE_MINIMUM_REQUIRED(VERSION 3.9 FATAL_ERROR)

PROJECT(arboretum)

FIND_PACKAGE(OpenMP)

# Compiler flags
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -w")

if(OpenMP_CXX_FOUND OR OPENMP_FOUND)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

FIND_PACKAGE(CUDA 8.0 REQUIRED)

SET(CUDA_64_BIT_DEVICE_CODE ON CACHE STRING "Compile device code in 64 bit mode" FORCE)
SET(CUDA_NVCC_FLAGS "-arch=sm_61 -Xcompiler -fPIC")

FILE(GLOB_RECURSE GPU_SOURCES
    src/*.cpp
    src/*.h
    src/*.cu
    src/*.cuh
    )

FILE(GLOB_RECURSE WRAPPER_SOURCES
    python-wrapper/*.cpp
    python-wrapper/*.h
    )

INCLUDE_DIRECTORIES(_cub/)
INCLUDE_DIRECTORIES(_json/src)

CUDA_ADD_LIBRARY(arboretum SHARED ${GPU_SOURCES} ${WRAPPER_SOURCES} )

